force-app/main/default/objects/Product2/fields/Centro_de_Distribuicao__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Distribuicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>Centro_de_Distribuicao__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>