force-app/main/default/objects/Product2/fields/Cor__c.field-meta.xml
<CustomField>
    <fullName>Cor__c</fullName>
    <label>Cor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>