force-app/main/default/objects/Product2/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <label>EAN do Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>