force-app/main/default/objects/Product2/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <label>Tamanho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>